2011-07-07  Tao Liu  <vladimir.liu@gmail.com>
	MACS version 2.0.5 (tag:alpha)

	* macs2, MACS2/cPeakDetect.py, MACS2/IO/cScoreTrack.pyx,
	MACS2/IO/cPeakIO.pyx

	Use hash to store peak information. Add back the feature to deal
	with data without control.

2011-06-22  Tao Liu  <taoliu@jimmy.harvard.edu>
	MACS version 2.0.4 (tag:alpha)

	* cPeakDetect.py

	Fix a bug, correctly assign lambda_bg while --to-small is
	set. Thanks Junya Seo!

	Add rank and num of bp columns to pvalue-qvalue table.

	* cScoreTrack.py

	Fix bugs to correctly deal with peakless chromosomes. Thanks
	Vaibhav Jain!

	Use AFDR for independent tests instead.

	* encodePeak

	Now MACS can output peak coordinates together with pvalue, qvalue,
	summit positions in a single encodePeak format (designed for
	ENCODE project) file. This file can be loaded to UCSC
	browser. Definition of some specific columns are: 5th:
	int(-log10pvalue*10), 7th: fold-change, 8th: -log10pvalue, 9th:
	-log10qvalue, 10th: relative summit position to peak start.


2011-06-19  Tao Liu  <taoliu@jimmy.harvard.edu>
	MACS version 2.0.3 (tag:alpha)

	* Rich output with qvalue, fold enrichment, and pileup height

	Calculate q-values using a refined Benjamini–Hochberg–Yekutieli
	procedure:

	http://en.wikipedia.org/wiki/False_discovery_rate#Dependent_tests

	Now we have a similiar xls output file as before. The differences
	from previous file are:

	1. Summit now is absolute summit, instead of relative summit
	   position;
	2. 'Pileup' is previous 'tag' column. It's the extended fragment
	   pileup at the peak summit;
	3. We now use '-log10(pvalue)' instead of '-10log10(pvalue)', so
	   5.00 means 1e-5, simple and less confusing.
	4. FDR column becomes '-log10(qvalue)' column.
	5. The pileup, -log10pvalue, fold_enrichment and -log10qvalue are
	   the values at the peak summit.

	* Extra output files

	NAME_pqtable.txt contains pvalue and qvalue relationships.

	NAME_treat_pvalue.bdg and NAME_treat_qvalue.bdg store -log10pvalue