@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-# Time-stamp: <2011-06-20 17:13:12 Tao Liu>
+# Time-stamp: <2011-07-08 14:41:19 Tao Liu>
 
 import os
 import sys
@@ -77,7 +77,7 @@ def main():
     info("Write to output bedGraph...")
     ofhd = open(options.ofile,"w")
 
-    sbtrack.write_bedGraph(bdgfhd,name="%s_Scores" % (method.upper()),description="Scores calculated by %s" % (method.upper()))
+    sbtrack.write_bedGraph(ofhd,name="%s_Scores" % (method.upper()),description="Scores calculated by %s" % (method.upper()))
     
 
 if __name__ == '__main__':
